Closed Bug 92322 Opened 23 years ago Closed 23 years ago

Default plug-in not supported in Mac OS X

Categories

(Core Graveyard :: Plug-ins, defect, P5)

PowerPC
macOS
defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.4

People

(Reporter: chrispetersen, Assigned: beard)

References

Details

(Whiteboard: PDT [OSX+])

Attachments

(2 files)

Build: 2001072503
Platform: Mac OS X
Expected Results: Default plug-in should be supported
What I got:Default plug-in isn't loaded by browser

Steps to reproduce:

1) Go to a site that requires a plug-in that's not installed (For example, 
real.com)

2) Default plug-in isn't displayed.
Must be trivial to fix. --> Peter.
Assignee: av → peterl
Summary: Default plug-in not supported in Mac OS X → Default plug-in not supported in Mac OS X
Another bug that would be fixed by bug 83754. I don't know if it's easier to fix
that or covert the nullplugin to a be carbonized.

Brian, do you know how much work it would be to carbonize:
http://lxr.mozilla.org/seamonkey/source/modules/plugin/samples/default/mac
Status: NEW → ASSIGNED
Depends on: 83754
Target Milestone: --- → mozilla0.9.5
It looks like there is already TARGET_CARBON #ifdef code there. I don't know if
there is a target in the project file or not.

I don't imagine this would be terribly difficult, but I haven't done it before
either. :)
Hm..there is tons of TARGET_CARBON code in there and it does seem to build
something which kinda looks like the default plugin. Not sure if the project
file needs to be modified, but there is only one target, "NullPluginPPC" and it
doesn't appear the plugin gets loaded at run-time. 

What is needed to convert a project to build a library to run on CARBON?

Priority: -- → P5
-->beard
Assignee: peterl → beard
Status: ASSIGNED → NEW
I will carbonize thetself and get this fixed ASAP.
Severity: normal → blocker
Status: NEW → ASSIGNED
I added a new target to
mozilla/modules/plugin/samples/default/mac/NullPlugin.mcp,  which now uses
MacPrefix.h as its prefix header, so I needed to add additional #includes to
NullPlugin.cpp. Also links against CarbonLib and "MSL C.Carbon.Lib." Building
this target by hand produces a working default plugin which causes the proper
page to come up for downloading the Quicktime plugin when it has been put into
the trash. Please review my trivial patch, and I'll get this checked into trunk
as soon as possible.
Keywords: nsbranch+, patch
Comment on attachment 50990 [details] [diff] [review]
Patch to build NullPluginPPCCarbon target.

r=peterl
Attachment #50990 - Flags: review+
sr=sfraser on the patches
Changes checked in on trunk.
Whiteboard: PDT [OSX+]
check it in - PDT+
Whiteboard: PDT [OSX+] → [PDT+] [OSX+]
Changes checked into 094 branch.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Whiteboard: [PDT+] [OSX+] → PDT [OSX+]
Target Milestone: mozilla0.9.5 → mozilla0.9.4
Verified on the Sept 28th Mac OS X branch build. A better url to test it is to
go to http://java.sun.com/. The Netscape Plug-ins dialog should appear with Get
the Plug-in and Cancel buttons.
Keywords: vtrunk
verified default plugins is  on the mac os X branch build 0928 and it works as 
expected when a plugin is missing. adding keyword :vtrunk to verify on trunk l8r
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: