Fix for bug #92322, changes for Carbon/Mac OS X, r=peterl, sr=sfraser.