build/mac/build_scripts/MozillaBuildList.pm
@@ -1881,6 +1881,9 @@ sub BuildPluginsProjects()
 
     StartBuildModule("plugins");
 
+    # $C becomes a component of target names for selecting either the Carbon or non-Carbon target of a project
+    my($C) = $main::options{carbon} ? "Carbon" : "";
+
     # as a temporary measure, make sure that the folder "MacOS Support:JNIHeaders" exists,
     # before we attempt to build the MRJ plugin. This will allow a gradual transition.
     if ( -e GetCodeWarriorRelativePath("MacOS Support:JNIHeaders"))
@@ -1917,7 +1920,7 @@ sub BuildPluginsProjects()
     my($plugin_path) = ":mozilla:modules:plugin:samples:default:mac:";
     my($plugin_dist) = GetBinDirectory() . "Plug-ins:";
 
-    BuildProject($plugin_path . "NullPlugin.mcp", "NullPluginPPC");
+    BuildProject($plugin_path . "NullPlugin.mcp", "NullPluginPPC$C");
     MakeAlias($plugin_path . "Default Plug-in", $plugin_dist);
 
     EndBuildModule("plugins");
